2004-05-03  Derek Price  <derek@ximbiot.com>

	* bison.m4: Use AM_MISSING_PROG rather than a set/subst combination.

2004-05-02  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Add strerror.m4 & strerror_r.m4.
	* strerror_r.m4: New file.
	* Makefile.in: Regenerated.

2004-04-28  Derek Price  <derek@ximbiot.com>

	* unlocked-io.m4: Update to most recent version from GNULIB.

2004-04-27  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Add new files.
	* bison.m4, tm_gmtoff.m4, getdate.m4: New files.
	* Makefile.in: Regenerated.

2004-04-27  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Add new file.
	* mktime.m4: New file.
	* Makefile.in: Regenerated.

2004-04-27  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Add new file.
	* time_r.m4: New file.
	* Makefile.in: Regenerated.

2004-04-27  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Add new file.
	* nanosleep.m4: New file.
	* Makefile.in: Regenerated.

2004-04-27  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Add new files.
	* clock_time.m4, gettime.m4: New files.
	* Makefile.in: Regenerated.

2004-04-27  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Add new file.
	* gettimeofday.m4: New file.
	* Makefile.in: Regenerated.

2004-04-27  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Add new file.
	* st_mtim.m4, timespec.m4: New file.
	* Makefile.in: Regenerated.

2004-04-27  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Add new file.
	* extensions.m4: New file.
	* Makefile.in: Regenerated.

2004-04-27  Derek Price  <derek@ximbiot.com>

	* dos.m4: Update from GNULIB.

2004-04-27  Derek Price  <derek@ximbiot.com>

	Add dirname module from GNULIB.

	* Makefile.am (EXTRA_DIST): Add new files.
	* dirname.m4, dos.m4: New files.
	* Makefile.in: Regenerated.

2004-04-21  Derek Price  <derek@ximbiot.com>

	Add stdbool module from GNULIB.

	* Makefile.am (EXTRA_DIST): Add stdbool.m4.